# Pathie

./: .env.dev  .env.dev.example  .env.example  .env.prod  .env.prod.db  .env.prod.db.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.ai/00-prompt-library/: 00-project-idea.md  01-project-description.md  02-asystent-planowania-prd.md  04-generowanie-kompletnego-prd.md  05-analiza-stacku-technologicznego.md  07-asystent-planowania-bazy-danych.md  09-tworzenie-schematu-bazy-danych.md  (+10 more)
docs/: API_REGISTRATION_TESTING.md  API_ROUTES_LIST_TESTING.md  ENV_SETUP.md
nginx/: nginx.conf
pathie/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  requirements.txt
pathie/core/: admin.py  middleware.py  permissions.py  selectors.py  serializers.py  services.py  tests.py  types.py  views.py
pathie/core/fixtures/: initial_tags.json
pathie/core/management/commands/: seed_tags.py
pathie/core/migrations/: 0001_initial.py  0002_sql_layer.py
pathie/core/migrations/sql/: 0001_indexes.sql  0002_rls_policies.sql  0003_triggers.sql  0004_check_constraints.sql
pathie/core/models/: __init__.py  ai_log.py  place.py  place_description.py  rating.py  route.py  route_point.py  tag.py
pathie/core/static/core/js/: routeWizard.js
pathie/core/templates/core/: base.html  landing.html  login.html  register.html
pathie/core/tests/: test_auth.py  test_route_actions.py  test_route_points.py  test_routes.py  test_serializers.py  test_services.py  test_tags.py
pathie/pathie/: asgi.py  env_types.py  settings.py  urls.py  wsgi.py
(+52 files in other folders)
